# gotennet-for-oc20

./: README.md  main.py  pyproject.toml  requirements.txt
configs/oc20/s2ef/: gotennet.yaml
gotennet/: oc20_runner.py
gotennet/configs/: test.yaml  train.yaml
gotennet/configs/model/: gotennet.yaml
gotennet/models/: __init__.py  oc20_model.py  pbc.py
gotennet/tests/: test_oc20_smoke.py
gotennet/utils/: __init__.py
scripts/: fix_pyg_env.sh
